6.2/api/Files/index_files.md
---
title: Files

---

# Files




* **dir [Applications](../Files/dir_8c1195e4829fa17630c4278c41da729a.md#dir-applications)** 
    * **dir [Applications/shapeworks](../Files/dir_486a45e6ebc11931a27093b877e14af3.md#dir-applications/shapeworks)** 
        * **file [Applications/shapeworks/Command.h](../Files/Command_8h.md#file-command.h)** 
        * **file [Applications/shapeworks/Commands.h](../Files/Commands_8h.md#file-commands.h)** 
        * **file [Applications/shapeworks/Executable.h](../Files/Executable_8h.md#file-executable.h)** 
        * **file [Applications/shapeworks/SharedCommandData.h](../Files/SharedCommandData_8h.md#file-sharedcommanddata.h)** 
* **dir [Documentation](../Files/dir_551d0b2f9f7bff4cdbf0f36993977d0c.md#dir-documentation)** 
    * **dir [Documentation/Doxygen](../Files/dir_7c6f9f3331e56788ec84e2f17f1759d8.md#dir-documentation/doxygen)** 
* **dir [Libs](../Files/dir_6e6cb9563333489fde7459b1f95e59a5.md#dir-libs)** 
    * **dir [Libs/Alignment](../Files/dir_c8a30dba58b805ee2d567ab327483fca.md#dir-libs/alignment)** 
        * **dir [Libs/Alignment/Transforms](../Files/dir_3c387d8f52af5a1c9b80596228515621.md#dir-libs/alignment/transforms)** 
            * **file [Libs/Alignment/Transforms/itkAdvancedTransform.h](../Files/itkAdvancedTransform_8h.md#file-itkadvancedtransform.h)** 
            * **file [Libs/Alignment/Transforms/itkCompactlySupportedRBFSparseKernelTransform.h](../Files/itkCompactlySupportedRBFSparseKernelTransform_8h.md#file-itkcompactlysupportedrbfsparsekerneltransform.h)** 
            * **file [Libs/Alignment/Transforms/itkKernelTransform2.h](../Files/itkKernelTransform2_8h.md#file-itkkerneltransform2.h)** 
            * **file [Libs/Alignment/Transforms/itkSparseKernelTransform.h](../Files/itkSparseKernelTransform_8h.md#file-itksparsekerneltransform.h)** 
            * **file [Libs/Alignment/Transforms/itkThinPlateSplineKernelTransform2.h](../Files/itkThinPlateSplineKernelTransform2_8h.md#file-itkthinplatesplinekerneltransform2.h)** 
        * **file [Libs/Alignment/Procrustes3D.h](../Files/Procrustes3D_8h.md#file-procrustes3d.h)** 
    * **dir [Libs/Analyze](../Files/dir_d77cc112773b74d11448b7fad9142c8e.md#dir-libs/analyze)** 
        * **file [Libs/Analyze/Reconstruction.h](../Files/Reconstruction_8h.md#file-reconstruction.h)** 
        * **file [Libs/Analyze/Vis.h](../Files/Vis_8h.md#file-vis.h)** 
    * **dir [Libs/Common](../Files/dir_c13ed27a749775eeb2d59234813cae48.md#dir-libs/common)** 
        * **file [Libs/Common/Region.h](../Files/Region_8h.md#file-region.h)** 
        * **file [Libs/Common/Shapeworks.h](../Files/Shapeworks_8h.md#file-shapeworks.h)** 
        * **file [Libs/Common/ShapeworksUtils.h](../Files/ShapeworksUtils_8h.md#file-shapeworksutils.h)** 
    * **dir [Libs/Groom](../Files/dir_c8ce71b7fc76205395f44c2291e69b75.md#dir-libs/groom)** 
        * **file [Libs/Groom/Groom.h](../Files/Groom_8h.md#file-groom.h)** 
        * **file [Libs/Groom/GroomParameters.h](../Files/GroomParameters_8h.md#file-groomparameters.h)** 
    * **dir [Libs/Image](../Files/dir_9e4ba78685e6608cfdea07960abd189c.md#dir-libs/image)** 
        * **file [Libs/Image/Image.h](../Files/Image_8h.md#file-image.h)** 
        * **file [Libs/Image/ImageUtils.h](../Files/ImageUtils_8h.md#file-imageutils.h)** 
        * **file [Libs/Image/VectorImage.h](../Files/VectorImage_8h.md#file-vectorimage.h)** 
        * **file [Libs/Image/itkTPGACLevelSetImageFilter.h](../Files/itkTPGACLevelSetImageFilter_8h.md#file-itktpgaclevelsetimagefilter.h)** 
    * **dir [Libs/Mesh](../Files/dir_36d0ece48b2c599ca7cdf3fcf70a4111.md#dir-libs/mesh)** 
        * **dir [Libs/Mesh/PreviewMeshQC](../Files/dir_409787ee32d93aa6a212981d92e6dc9a.md#dir-libs/mesh/previewmeshqc)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEAreaCoverage.h](../Files/FEAreaCoverage_8h.md#file-feareacoverage.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEAutoMesher.h](../Files/FEAutoMesher_8h.md#file-feautomesher.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FECVDDecimationModifier.h](../Files/FECVDDecimationModifier_8h.md#file-fecvddecimationmodifier.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FECoreMesh.h](../Files/FECoreMesh_8h.md#file-fecoremesh.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEElement.h](../Files/FEElement_8h.md#file-feelement.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEFillHole.h](../Files/FEFillHole_8h.md#file-fefillhole.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEFixMesh.h](../Files/FEFixMesh_8h.md#file-fefixmesh.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEMesh.h](../Files/FEMesh_8h.md#file-femesh.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEMeshSmoothingModifier.h](../Files/FEMeshSmoothingModifier_8h.md#file-femeshsmoothingmodifier.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FENodeElementList.h](../Files/FENodeElementList_8h.md#file-fenodeelementlist.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FENodeFaceList.h](../Files/FENodeFaceList_8h.md#file-fenodefacelist.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FENodeNodeList.h](../Files/FENodeNodeList_8h.md#file-fenodenodelist.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEVTKExport.h](../Files/FEVTKExport_8h.md#file-fevtkexport.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/FEVTKImport.h](../Files/FEVTKImport_8h.md#file-fevtkimport.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/Intersect.h](../Files/Intersect_8h.md#file-intersect.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/math3d.h](../Files/math3d_8h.md#file-math3d.h)** 
            * **file [Libs/Mesh/PreviewMeshQC/stdafx.h](../Files/stdafx_8h.md#file-stdafx.h)** 
        * **file [Libs/Mesh/Mesh.h](../Files/Mesh_8h.md#file-mesh.h)** 
        * **file [Libs/Mesh/MeshUtils.h](../Files/MeshUtils_8h.md#file-meshutils.h)** 
        * **file [Libs/Mesh/MeshWarper.h](../Files/MeshWarper_8h.md#file-meshwarper.h)** <br>Mesh warping capability. 
        * **file [Libs/Mesh/ParticleBasedSurfaceReconstruction_InputParams.h](../Files/ParticleBasedSurfaceReconstruction__InputParams_8h.md#file-particlebasedsurfacereconstruction-inputparams.h)** 
        * **file [Libs/Mesh/itkMultiplyByConstantImageFilter.h](../Files/itkMultiplyByConstantImageFilter_8h.md#file-itkmultiplybyconstantimagefilter.h)** 
        * **file [Libs/Mesh/meshFIM.h](../Files/meshFIM_8h.md#file-meshfim.h)** 
    * **dir [Libs/Optimize](../Files/dir_f02d5d8e81e1edd3722111e50e18938d.md#dir-libs/optimize)** 
        * **dir [Libs/Optimize/ParticleSystem](../Files/dir_8f268951dfa1af237c8fb7830f5f1164.md#dir-libs/optimize/particlesystem)** 
            * **file [Libs/Optimize/ParticleSystem/Constraint.h](../Files/Constraint_8h.md#file-constraint.h)** 
            * **file [Libs/Optimize/ParticleSystem/ConstraintType.h](../Files/ConstraintType_8h.md#file-constrainttype.h)** 
            * **file [Libs/Optimize/ParticleSystem/Constraints.h](../Files/Constraints_8h.md#file-constraints.h)** 
            * **file [Libs/Optimize/ParticleSystem/ContourDomain.h](../Files/ContourDomain_8h.md#file-contourdomain.h)** 
            * **file [Libs/Optimize/ParticleSystem/CorrespondenceMode.h](../Files/CorrespondenceMode_8h.md#file-correspondencemode.h)** 
            * **file [Libs/Optimize/ParticleSystem/DomainType.h](../Files/DomainType_8h.md#file-domaintype.h)** 
            * **file [Libs/Optimize/ParticleSystem/FreeFormConstraint.h](../Files/FreeFormConstraint_8h.md#file-freeformconstraint.h)** 
            * **file [Libs/Optimize/ParticleSystem/MemoryUsage.h](../Files/MemoryUsage_8h.md#file-memoryusage.h)** 
            * **file [Libs/Optimize/ParticleSystem/MeshDomain.h](../Files/MeshDomain_8h.md#file-meshdomain.h)** 
            * **file [Libs/Optimize/ParticleSystem/MeshGeoEntry.h](../Files/MeshGeoEntry_8h.md#file-meshgeoentry.h)** 
            * **file [Libs/Optimize/ParticleSystem/MeshWrapper.h](../Files/MeshWrapper_8h.md#file-meshwrapper.h)** 
            * **file [Libs/Optimize/ParticleSystem/OptimizationVisualizer.h](../Files/OptimizationVisualizer_8h.md#file-optimizationvisualizer.h)** 
            * **file [Libs/Optimize/ParticleSystem/PlaneConstraint.h](../Files/PlaneConstraint_8h.md#file-planeconstraint.h)** 
            * **file [Libs/Optimize/ParticleSystem/Sampler.h](../Files/Sampler_8h.md#file-sampler.h)** 
            * **file [Libs/Optimize/ParticleSystem/SphereConstraint.h](../Files/SphereConstraint_8h.md#file-sphereconstraint.h)** 
            * **file [Libs/Optimize/ParticleSystem/TriMeshWrapper.h](../Files/TriMeshWrapper_8h.md#file-trimeshwrapper.h)** 
            * **file [Libs/Optimize/ParticleSystem/VtkMeshWrapper.h](../Files/VtkMeshWrapper_8h.md#file-vtkmeshwrapper.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkImageToVTKImageFilter.h](../Files/Optimize_2ParticleSystem_2itkImageToVTKImageFilter_8h.md#file-itkimagetovtkimagefilter.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleAttribute.h](../Files/itkParticleAttribute_8h.md#file-itkparticleattribute.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleConstrainedModifiedCotangentEntropyGradientFunction.h](../Files/itkParticleConstrainedModifiedCotangentEntropyGradientFunction_8h.md#file-itkparticleconstrainedmodifiedcotangententropygradientfunction.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleContainer.h](../Files/itkParticleContainer_8h.md#file-itkparticlecontainer.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleContainerArrayAttribute.h](../Files/itkParticleContainerArrayAttribute_8h.md#file-itkparticlecontainerarrayattribute.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleCurvatureEntropyGradientFunction.h](../Files/itkParticleCurvatureEntropyGradientFunction_8h.md#file-itkparticlecurvatureentropygradientfunction.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleCurvatureEntropyPlanarConstraint.h](../Files/itkParticleCurvatureEntropyPlanarConstraint_8h.md#file-itkparticlecurvatureentropyplanarconstraint.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleDomain.h](../Files/itkParticleDomain_8h.md#file-itkparticledomain.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleDualVectorFunction.h](../Files/itkParticleDualVectorFunction_8h.md#file-itkparticledualvectorfunction.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleEnsembleEntropyFunction.h](../Files/itkParticleEnsembleEntropyFunction_8h.md#file-itkparticleensembleentropyfunction.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleEntropyGradientFunction.h](../Files/itkParticleEntropyGradientFunction_8h.md#file-itkparticleentropygradientfunction.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleEvents.h](../Files/itkParticleEvents_8h.md#file-itkparticleevents.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleGaussianModeWriter.h](../Files/itkParticleGaussianModeWriter_8h.md#file-itkparticlegaussianmodewriter.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleGeneralShapeGradientMatrix.h](../Files/itkParticleGeneralShapeGradientMatrix_8h.md#file-itkparticlegeneralshapegradientmatrix.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleGeneralShapeMatrix.h](../Files/itkParticleGeneralShapeMatrix_8h.md#file-itkparticlegeneralshapematrix.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleGoodBadAssessment.h](../Files/itkParticleGoodBadAssessment_8h.md#file-itkparticlegoodbadassessment.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleGradientDescentPositionOptimizer.h](../Files/itkParticleGradientDescentPositionOptimizer_8h.md#file-itkparticlegradientdescentpositionoptimizer.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleImageDomain.h](../Files/itkParticleImageDomain_8h.md#file-itkparticleimagedomain.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleImageDomainWithCurvature.h](../Files/itkParticleImageDomainWithCurvature_8h.md#file-itkparticleimagedomainwithcurvature.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleImageDomainWithGradN.h](../Files/itkParticleImageDomainWithGradN_8h.md#file-itkparticleimagedomainwithgradn.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleImageDomainWithGradients.h](../Files/itkParticleImageDomainWithGradients_8h.md#file-itkparticleimagedomainwithgradients.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleImplicitSurfaceDomain.h](../Files/itkParticleImplicitSurfaceDomain_8h.md#file-itkparticleimplicitsurfacedomain.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleMeanCurvatureAttribute.h](../Files/itkParticleMeanCurvatureAttribute_8h.md#file-itkparticlemeancurvatureattribute.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleMeshBasedGeneralEntropyGradientFunction.h](../Files/itkParticleMeshBasedGeneralEntropyGradientFunction_8h.md#file-itkparticlemeshbasedgeneralentropygradientfunction.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleModifiedCotangentEntropyGradientFunction.h](../Files/itkParticleModifiedCotangentEntropyGradientFunction_8h.md#file-itkparticlemodifiedcotangententropygradientfunction.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleNeighborhood.h](../Files/itkParticleNeighborhood_8h.md#file-itkparticleneighborhood.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleOmegaGradientFunction.h](../Files/itkParticleOmegaGradientFunction_8h.md#file-itkparticleomegagradientfunction.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticlePointIndexPair.h](../Files/itkParticlePointIndexPair_8h.md#file-itkparticlepointindexpair.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleProcrustesRegistration.h](../Files/itkParticleProcrustesRegistration_8h.md#file-itkparticleprocrustesregistration.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleRegionDomain.h](../Files/itkParticleRegionDomain_8h.md#file-itkparticleregiondomain.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleRegionNeighborhood.h](../Files/itkParticleRegionNeighborhood_8h.md#file-itkparticleregionneighborhood.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleShapeLinearRegressionMatrixAttribute.h](../Files/itkParticleShapeLinearRegressionMatrixAttribute_8h.md#file-itkparticleshapelinearregressionmatrixattribute.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleShapeMatrixAttribute.h](../Files/itkParticleShapeMatrixAttribute_8h.md#file-itkparticleshapematrixattribute.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleShapeMixedEffectsMatrixAttribute.h](../Files/itkParticleShapeMixedEffectsMatrixAttribute_8h.md#file-itkparticleshapemixedeffectsmatrixattribute.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleSurfaceNeighborhood.h](../Files/itkParticleSurfaceNeighborhood_8h.md#file-itkparticlesurfaceneighborhood.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleSystem.h](../Files/itkParticleSystem_8h.md#file-itkparticlesystem.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkParticleVectorFunction.h](../Files/itkParticleVectorFunction_8h.md#file-itkparticlevectorfunction.h)** 
            * **file [Libs/Optimize/ParticleSystem/itkPowerOfTwoPointTree.h](../Files/itkPowerOfTwoPointTree_8h.md#file-itkpoweroftwopointtree.h)** 
            * **file [Libs/Optimize/ParticleSystem/object_reader.h](../Files/object__reader_8h.md#file-object-reader.h)** 
            * **file [Libs/Optimize/ParticleSystem/object_writer.h](../Files/object__writer_8h.md#file-object-writer.h)** 
        * **file [Libs/Optimize/Optimize.h](../Files/Optimize_8h.md#file-optimize.h)** 
        * **file [Libs/Optimize/OptimizeParameterFile.h](../Files/OptimizeParameterFile_8h.md#file-optimizeparameterfile.h)** 
        * **file [Libs/Optimize/OptimizeParameters.h](../Files/OptimizeParameters_8h.md#file-optimizeparameters.h)** 
    * **dir [Libs/Particles](../Files/dir_f6c26397dfcef1d1f5f1786f8168e7dd.md#dir-libs/particles)** 
        * **file [Libs/Particles/EvaluationUtil.h](../Files/EvaluationUtil_8h.md#file-evaluationutil.h)** 
        * **file [Libs/Particles/ParticleShapeStatistics.h](../Files/ParticleShapeStatistics_8h.md#file-particleshapestatistics.h)** 
        * **file [Libs/Particles/ParticleSystem.h](../Files/ParticleSystem_8h.md#file-particlesystem.h)** 
        * **file [Libs/Particles/ShapeEvaluation.h](../Files/ShapeEvaluation_8h.md#file-shapeevaluation.h)** 
        * **file [Libs/Particles/itkParticlePositionReader.h](../Files/itkParticlePositionReader_8h.md#file-itkparticlepositionreader.h)** 
        * **file [Libs/Particles/itkParticlePositionWriter.h](../Files/itkParticlePositionWriter_8h.md#file-itkparticlepositionwriter.h)** 
    * **dir [Libs/Project](../Files/dir_4ea27a77bf632cd63100af8008b8abf4.md#dir-libs/project)** 
        * **file [Libs/Project/Parameters.h](../Files/Parameters_8h.md#file-parameters.h)** 
        * **file [Libs/Project/Project.h](../Files/Project_8h.md#file-project.h)** 
        * **file [Libs/Project/ProjectUtils.h](../Files/ProjectUtils_8h.md#file-projectutils.h)** 
        * **file [Libs/Project/Subject.h](../Files/Subject_8h.md#file-subject.h)** 
        * **file [Libs/Project/Variant.h](../Files/Variant_8h.md#file-variant.h)** 
    * **dir [Libs/Python](../Files/dir_6cd87311705ab44b460cce19838a0cf5.md#dir-libs/python)** 
        * **file [Libs/Python/pybind_utils.h](../Files/pybind__utils_8h.md#file-pybind-utils.h)** 
    * **dir [Libs/Utils](../Files/dir_73a09fceee206218e6d903b3c5deb969.md#dir-libs/utils)** 
        * **file [Libs/Utils/EigenUtils.h](../Files/EigenUtils_8h.md#file-eigenutils.h)** 
        * **file [Libs/Utils/StringUtils.h](../Files/StringUtils_8h.md#file-stringutils.h)** 
        * **file [Libs/Utils/Utils.h](../Files/Utils_8h.md#file-utils.h)** 
        * **file [Libs/Utils/itkImageToVTKImageFilter.h](../Files/Utils_2itkImageToVTKImageFilter_8h.md#file-itkimagetovtkimagefilter.h)** 
* **file [Module.dox](../Files/Module_8dox.md#file-module.dox)** 
* **dir [Studio](../Files/dir_baf8d66207f3fc39faf866e67ca98ce2.md#dir-studio)** 
    * **dir [Studio/src](../Files/dir_15d8e205eb0e69868bf0703ef3760a37.md#dir-studio/src)** 
        * **dir [Studio/src/Analysis](../Files/dir_85be493154e47884a39224bf31e366f0.md#dir-studio/src/analysis)** 
            * **file [Studio/src/Analysis/AnalysisTool.h](../Files/AnalysisTool_8h.md#file-analysistool.h)** 
            * **file [Studio/src/Analysis/ShapeEvaluationJob.h](../Files/ShapeEvaluationJob_8h.md#file-shapeevaluationjob.h)** 
        * **dir [Studio/src/Data](../Files/dir_217db32785bc9a56b002739d3e5efbb6.md#dir-studio/src/data)** 
            * **file [Studio/src/Data/CustomSurfaceReconstructionFilter.h](../Files/CustomSurfaceReconstructionFilter_8h.md#file-customsurfacereconstructionfilter.h)** 
            * **file [Studio/src/Data/ItkToVtk.h](../Files/ItkToVtk_8h.md#file-itktovtk.h)** 
            * **file [Studio/src/Data/LegacyMeshGenerator.h](../Files/LegacyMeshGenerator_8h.md#file-legacymeshgenerator.h)** <br>Mesh generation. 
            * **file [Studio/src/Data/MeshCache.h](../Files/MeshCache_8h.md#file-meshcache.h)** <br>Thread safe cache for meshes index by shape. 
            * **file [Studio/src/Data/MeshGenerator.h](../Files/MeshGenerator_8h.md#file-meshgenerator.h)** <br>Mesh generation. 
            * **file [Studio/src/Data/MeshGroup.h](../Files/MeshGroup_8h.md#file-meshgroup.h)** 
            * **file [Studio/src/Data/MeshManager.h](../Files/MeshManager_8h.md#file-meshmanager.h)** <br>Class to manage meshes. 
            * **file [Studio/src/Data/MeshSettings.h](../Files/MeshSettings_8h.md#file-meshsettings.h)** 
            * **file [Studio/src/Data/MeshWorkQueue.h](../Files/MeshWorkQueue_8h.md#file-meshworkqueue.h)** <br>Provides concurrent access to a list of shapes to work needing reconstruction. 
            * **file [Studio/src/Data/MeshWorker.h](../Files/MeshWorker_8h.md#file-meshworker.h)** <br>Worker class for parallel mesh reconstruction. 
            * **file [Studio/src/Data/Preferences.h](../Files/Preferences_8h.md#file-preferences.h)** 
            * **file [Studio/src/Data/PreferencesWindow.h](../Files/PreferencesWindow_8h.md#file-preferenceswindow.h)** 
            * **file [Studio/src/Data/QMeshWarper.h](../Files/QMeshWarper_8h.md#file-qmeshwarper.h)** 
            * **file [Studio/src/Data/Session.h](../Files/Session_8h.md#file-session.h)** 
            * **file [Studio/src/Data/Shape.h](../Files/Shape_8h.md#file-shape.h)** 
            * **file [Studio/src/Data/ShapeWorksWorker.h](../Files/ShapeWorksWorker_8h.md#file-shapeworksworker.h)** 
            * **file [Studio/src/Data/StudioLog.h](../Files/StudioLog_8h.md#file-studiolog.h)** 
            * **file [Studio/src/Data/StudioMesh.h](../Files/StudioMesh_8h.md#file-studiomesh.h)** 
            * **file [Studio/src/Data/StudioParticles.h](../Files/StudioParticles_8h.md#file-studioparticles.h)** 
            * **file [Studio/src/Data/SurfaceReconstructor.h](../Files/SurfaceReconstructor_8h.md#file-surfacereconstructor.h)** <br>Surface [Reconstruction](../Classes/classReconstruction.md) Layer. 
            * **file [Studio/src/Data/Worker.h](../Files/Worker_8h.md#file-worker.h)** 
            * **file [Studio/src/Data/vtkPolyDataToImageData.h](../Files/vtkPolyDataToImageData_8h.md#file-vtkpolydatatoimagedata.h)** 
        * **dir [Studio/src/DeepSSM](../Files/dir_dec1a63a19e4f4a11987b8b8502ff5c9.md#dir-studio/src/deepssm)** 
            * **file [Studio/src/DeepSSM/DeepSSMJob.h](../Files/DeepSSMJob_8h.md#file-deepssmjob.h)** 
            * **file [Studio/src/DeepSSM/DeepSSMParameters.h](../Files/DeepSSMParameters_8h.md#file-deepssmparameters.h)** 
            * **file [Studio/src/DeepSSM/DeepSSMTool.h](../Files/DeepSSMTool_8h.md#file-deepssmtool.h)** 
        * **dir [Studio/src/Groom](../Files/dir_8c7b8cb8b689625715d68fff39675b66.md#dir-studio/src/groom)** 
            * **file [Studio/src/Groom/GroomTool.h](../Files/GroomTool_8h.md#file-groomtool.h)** 
            * **file [Studio/src/Groom/QGroom.h](../Files/QGroom_8h.md#file-qgroom.h)** 
        * **dir [Studio/src/Interface](../Files/dir_efdc2f3bb304c468939ff6eb3a94c2bf.md#dir-studio/src/interface)** 
            * **file [Studio/src/Interface/KeyboardShortcuts.h](../Files/KeyboardShortcuts_8h.md#file-keyboardshortcuts.h)** 
            * **file [Studio/src/Interface/LogWindow.h](../Files/LogWindow_8h.md#file-logwindow.h)** 
            * **file [Studio/src/Interface/ShapeWorksStudioApp.h](../Files/ShapeWorksStudioApp_8h.md#file-shapeworksstudioapp.h)** 
            * **file [Studio/src/Interface/SplashScreen.h](../Files/SplashScreen_8h.md#file-splashscreen.h)** 
            * **file [Studio/src/Interface/StatusBarWidget.h](../Files/StatusBarWidget_8h.md#file-statusbarwidget.h)** 
            * **file [Studio/src/Interface/Style.h](../Files/Style_8h.md#file-style.h)** 
            * **file [Studio/src/Interface/WheelEventForwarder.h](../Files/WheelEventForwarder_8h.md#file-wheeleventforwarder.h)** 
        * **dir [Studio/src/Job](../Files/dir_3e441cbfff25a2e63cb70556b317072d.md#dir-studio/src/job)** 
            * **file [Studio/src/Job/GroupPvalueJob.h](../Files/GroupPvalueJob_8h.md#file-grouppvaluejob.h)** 
            * **file [Studio/src/Job/Job.h](../Files/Job_8h.md#file-job.h)** 
        * **dir [Studio/src/Optimize](../Files/dir_502f02e7679d4b0b85423ea2b48b81cb.md#dir-studio/src/optimize)** 
            * **file [Studio/src/Optimize/OptimizeTool.h](../Files/OptimizeTool_8h.md#file-optimizetool.h)** 
            * **file [Studio/src/Optimize/QOptimize.h](../Files/QOptimize_8h.md#file-qoptimize.h)** 
        * **dir [Studio/src/Python](../Files/dir_55e6ce8615c819fee18162671e1bdfe2.md#dir-studio/src/python)** 
            * **file [Studio/src/Python/PythonWorker.h](../Files/PythonWorker_8h.md#file-pythonworker.h)** 
        * **dir [Studio/src/Resources](../Files/dir_f61e18dd1eaf83b576d05cfa79718e5e.md#dir-studio/src/resources)** 
            * **file [Studio/src/Resources/resource.h](../Files/resource_8h.md#file-resource.h)** 
        * **dir [Studio/src/Utils](../Files/dir_6dabbda62b442fabee487c4141c09499.md#dir-studio/src/utils)** 
            * **file [Studio/src/Utils/StackWalker.h](../Files/StackWalker_8h.md#file-stackwalker.h)** 
            * **file [Studio/src/Utils/StudioUtils.h](../Files/StudioUtils_8h.md#file-studioutils.h)** 
            * **file [Studio/src/Utils/WindowsCrashHandler.h](../Files/WindowsCrashHandler_8h.md#file-windowscrashhandler.h)** 
        * **dir [Studio/src/Visualization](../Files/dir_637230a14b7eb9dd0045894e3626aeed.md#dir-studio/src/visualization)** 
            * **file [Studio/src/Visualization/BarGraph.h](../Files/BarGraph_8h.md#file-bargraph.h)** 
            * **file [Studio/src/Visualization/ColorSchemes.h](../Files/ColorSchemes_8h.md#file-colorschemes.h)** 
            * **file [Studio/src/Visualization/Lightbox.h](../Files/Lightbox_8h.md#file-lightbox.h)** 
            * **file [Studio/src/Visualization/StudioInteractorStyle.h](../Files/StudioInteractorStyle_8h.md#file-studiointeractorstyle.h)** 
            * **file [Studio/src/Visualization/StudioVtkOutputWindow.h](../Files/StudioVtkOutputWindow_8h.md#file-studiovtkoutputwindow.h)** 
            * **file [Studio/src/Visualization/Viewer.h](../Files/Viewer_8h.md#file-viewer.h)** 
            * **file [Studio/src/Visualization/Visualizer.h](../Files/Visualizer_8h.md#file-visualizer.h)** 



-------------------------------

Updated on 2022-03-31 at 09:51:19 -0600
